# TextCommunicationGUI

./: CMakeLists.txt  README.md
_client/: CMakeLists.txt
_client/qml/: ChangePortDialog.qml  CustomItem.qml  FailedConnectToServerDialog.qml  main.qml
_client/src/: Network.cpp  Network.hpp  main.cpp  main.qml
_server/: CMakeLists.txt  main.cpp  main.qml  server.cpp  server.hpp
_server/qml/: ChangePortDialog.qml  CorrectDialog.qml  CustomButton.qml  IncorrectDialog.qml  main.qml
_server/src/: main.cpp  server.cpp  server.hpp
